--- a/spec/fixtures/reports/get_report_list_response.xml
+++ b/spec/fixtures/reports/get_report_list_response.xml
@@ -11,6 +11,27 @@
       <AvailableDate>2009-02-10T09:22:33+00:00</AvailableDate>
       <Acknowledged>false</Acknowledged>
     </ReportInfo>
+    <ReportInfo>
+      <ReportId>898899474</ReportId>
+      <ReportType>_GET_MERCHANT_LISTINGS_DATA_</ReportType>
+      <ReportRequestId>2278662938</ReportRequestId>
+      <AvailableDate>2015-02-10T09:22:33+00:00</AvailableDate>
+      <Acknowledged>false</Acknowledged>
+    </ReportInfo>
+    <ReportInfo>
+      <ReportId>898899475</ReportId>
+      <ReportType>_GET_MERCHANT_LISTINGS_DATA_</ReportType>
+      <ReportRequestId>2278662938</ReportRequestId>
+      <AvailableDate>2009-02-10T09:22:33+00:00</AvailableDate>
+      <Acknowledged>false</Acknowledged>
+    </ReportInfo>
+    <ReportInfo>
+      <ReportId>898899476</ReportId>
+      <ReportType>_GET_MERCHANT_LISTINGS_DATA_</ReportType>
+      <ReportRequestId>2278662938</ReportRequestId>
+      <AvailableDate>2014-02-10T09:22:33+00:00</AvailableDate>
+      <Acknowledged>false</Acknowledged>
+    </ReportInfo>
   </GetReportListResult>
   <ResponseMetadata>
     <RequestId>fbf677c1-dcee-4110-bc88-2ba3702e331b</RequestId>
